--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,36 +3,30 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyCoffeeQuins">
-        <activity
-            android:name=".customer.CustomerOrderActivity"
-            android:exported="false" />
-        <!-- LOGIN CUSTOMER (HALAMAN AWAL / LAUNCHER) -->
-        <activity
-            android:name=".customer.LoginCustomerActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- CUSTOMER -->
+        <!-- CUSTOMER -->
+        <activity android:name=".customer.ProfileActivity" android:exported="false" />
+        <activity android:name=".customer.CustomerOrderActivity" android:exported="false" />
         <activity android:name=".customer.RegisterCustomerActivity" />
         <activity android:name=".customer.CustomerDashboardActivity" />
         <activity android:name=".customer.MenuListActivity" />
         <activity android:name=".customer.MenuDetailActivity" />
         <activity android:name=".customer.CartActivity" />
         <activity android:name=".customer.CheckoutActivity" />
-        <activity android:name=".customer.OrderSuccessActivity" /> <!-- KASIR -->
-        <activity android:name=".kasir.LoginKasirActivity" />
-        <activity android:name=".kasir.KasirDashboardActivity" />
-        <activity android:name=".kasir.OrderListActivity" />
-        <activity android:name=".kasir.OrderDetailActivity" />
-        <activity android:name=".kasir.ManageMenuActivity" />
-        <activity android:name=".kasir.EditMenuActivity" />
-    </application>
+        <activity android:name=".customer.OrderSuccessActivity" />
 
+        <activity
+            android:name=".customer.LoginCustomerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
